fix navbar alignment

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -5,6 +5,9 @@ navbar {
   width: 100%;
   
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   background-color: #041829;
   color: white;
   font-weight: 600;
@@ -15,15 +18,13 @@ navbar {
 .logo {
   height: 70px;
   align-items: flex-start;
-  margin-left: 20px;
 }
 
 .navbar-content {
   padding: 10px;
-  margin-left: 30px;
 }
 
 .menu {
   margin-top: 15px;
-  margin-left: 70px;
+  padding-right: 1.5rem;
 }
